Do not set an application id on token requests from system tray

The Ids from SNIs are not the application id in the first place.
Also when activating an app which does not support the new method
on the inferface we never stop the startup effect.
BUG:439682